--- a/website/idex.html
+++ b/website/idex.html
@@ -13,10 +13,17 @@
     <!-- <p id="myP1"></p>
     <p id="myP2"></p>
     <p id="myP3"></p> -->
-    <h1 id="myH1">Welcom</h1>
+    <!-- <h1 id="myH1">Welcom</h1>
     <label>username : </label>
     <input id="myText"><br>
+    <button id="mySubmit">Submit</button> -->
+
+    <h1 id="myH1">Enter the radius of a circle</h1>
+    <label>radius:</label>
+    <input type="text" id="myText"><br>
     <button id="mySubmit">Submit</button>
+    <h3 id="myH3"></h3>
+
     <script src="index.js"></script>
 </body>
 </html>
